# snowrunner_savegame_manager

./: CMakeLists.txt  resources.qrc
resources/: mainwindow.qml
src/: MainwindowContext.cpp  MainwindowContext.h  SavegameManager.cpp  SavegameManager.h  SnapshotItem.cpp  SnapshotItem.h  main.cpp
